--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -24,11 +24,12 @@ const sizes = {
 
 const styles = {
   outline:
-    "bg-white border-2 border-black hover:bg-gray-300 text-black dark:bg-transparent dark:border-white dark:text-white dark:hover:bg-gray-800",
+    "bg-white border-2 border-black hover:shadow-xl text-black dark:bg-transparent dark:border-white dark:text-white dark:hover:bg-gray-800",
   primary:
-    "bg-black text-white hover:bg-gray-800  border-2 border-transparent dark:bg-white dark:text-black dark:hover:bg-gray-200",
-  inverted: "bg-white text-black   border-2 border-transparent",
-  muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+    "bg-black text-white hover:bg-gray-800 hover:shadow-xl  border-2 border-transparent dark:bg-white dark:text-black dark:hover:bg-gray-200",
+  inverted: "bg-white text-black hover:shadow-xl  border-2 border-transparent",
+  muted:
+    "bg-gray-100 hover:bg-gray-200 hover:shadow-xl  border-2 border-transparent",
 };
 ---
 
