--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,28 +9,40 @@ import Pagetitle from "@components/pagetitle.astro";
 <Layout title="Contact">
   <Container>
     <Pagetitle>
-      <Fragment slot="title">Contact</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="title">Contact me</Fragment>
+      <Fragment slot="desc">I'm happy to help.</Fragment>
     </Pagetitle>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Stablo</h2>
-        <p class="text-lg leading-relaxed text-gray-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+        <p
+          class="text-lg leading-relaxed text-gray-500 mt-3 dark:text-gray-300">
+          Have something to say? I'm always happy to hear from you. Just fill
+          out the form below and I'll get back to you as soon as possible.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@stablotemplate.com">hello@stablotemplate.com</a
+              href="mailto:stefangogov@proton.me">stefangogov@proton.me</a
             >
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+          </div>
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
+            <Icon class="text-gray-400 w-4 h-4" name="uil:globe" /><a
+              href="https://sgogov.com/">Photography Portfolio</a
+            >
+          </div>
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
+            <Icon class="text-gray-400 w-4 h-4" name="uil:github" /><a
+              href="https://github.com/stekatag">stekatag</a
+            >
+          </div>
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
+            <Icon class="text-gray-400 w-4 h-4" name="uil:linkedin" /><a
+              href="https://www.linkedin.com/in/stefan-gogov/">Stefan Gogov</a
             >
           </div>
         </div>
