Added dynamic routes for the categories

--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -47,7 +47,7 @@ const category = categories.find(
     </a>
   </div>
 
-  <a href="#">
+  <a href={`/category/${category.slug}`}>
     <Label theme={category.color}>{category.title}</Label>
   </a>
   <h2
