Fixed image route

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import { categories } from "@data/category";
 
         <figure>
           <img
-            src="./src/assets/authors/stefan.jpg"
+            src="/stefan.jpg"
             alt="Stefan's profile picture"
             width={300}
             height={300}
