--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@components/container.astro";
 import logoImage from "@assets/logo.svg";
+import Link from "./ui/link.astro";
 import darkLogo from "@assets/logo-dark.svg";
 import { Image } from "@astrojs/image/components";
 
@@ -53,9 +54,9 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
         class="flex-col items-center justify-start order-1 hidden w-full md:flex md:flex-row md:justify-end md:w-auto md:order-none md:flex-1 gap-10">
         {
           leftmenu.map((item) => (
-            <a href={item.href} class="nav-link after:dark:bg-purple-500">
+            <Link href={item.href} style="underline" size="unset">
               {item.label}
-            </a>
+            </Link>
           ))
         }
       </div>
@@ -95,9 +96,9 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
         class="flex-col gap-10 items-center justify-start order-2 hidden w-full md:flex md:flex-row md:w-auto md:flex-1 md:order-none">
         {
           rightmenu.map((item) => (
-            <a href={item.href} class="nav-link after:dark:bg-purple-500">
+            <Link href={item.href} style="underline" size="unset">
               {item.label}
-            </a>
+            </Link>
           ))
         }
       </div>
@@ -121,28 +122,11 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
   </nav>
 </Container>
 
-<style type="text/tailwindcss">
-  @tailwind utilities;
-
-  @layer utilities {
-    .nav-link {
-      @apply relative my-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-300;
-    }
-    .nav-link::after {
-      @apply content-[''] bg-blue-500 h-[3.5px] w-[0%] left-0 -bottom-[6px] rounded-md absolute duration-300;
-    }
-
-    .nav-link:hover::after {
-      @apply w-[100%];
-    }
-  }
-</style>
-
 <script is:inline>
-  const menuButton = document.getElementById("menu");
-  menuButton.addEventListener("click", () => {
-    [...document.querySelectorAll(".navmenu-toggle")].forEach((Element) => {
-      Element.classList.toggle("hidden");
-    });
+const menuButton = document.getElementById("menu");
+menuButton.addEventListener("click", () => {
+  [...document.querySelectorAll(".navmenu-toggle")].forEach((Element) => {
+    Element.classList.toggle("hidden");
   });
+});
 </script>
