--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -87,7 +87,9 @@ const category = categories.find(
           )
         }
       </div>
-      <span class="text-sm">{author.name}</span>
+      <a href={`/author/${author.slug}`}>
+        <span class="text-sm">{author.name}</span>
+      </a>
     </div>
     <span class="text-xs text-gray-300 dark:text-gray-600"> &bull;</span>
     <time class="text-sm" datetime={post.data.publishDate}>
