--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -5,40 +5,40 @@ import Postlist from "@components/postlist.astro";
 import Layout from "@layouts/Layout.astro";
 import { latestPosts } from "@utils/content";
 
-import { categories } from "@data/category";
-import type { Category } from "@data/category";
+import { authors } from "@data/authors";
+import type { Author } from "@data/category";
 
 export function getStaticPaths() {
   const map = {};
 
-  categories.forEach((category: Category) => {
-    map[category.slug] = latestPosts?.filter(
-      (post) => post?.data?.category === category?.slug
+  authors.forEach((author: Author) => {
+    map[author.slug] = latestPosts?.filter(
+      (post) => post?.data?.author === author?.slug
     );
   });
 
-  return categories?.map((category) => ({
+  return authors?.map((author) => ({
     params: {
-      category: category?.slug,
+      author: author?.slug,
     },
     props: {
-      posts: map[category?.slug],
-      category: category,
+      posts: map[author?.slug],
+      author: author,
     },
   }));
 }
 
-const { category, posts } = Astro.props;
+const { author, posts } = Astro.props;
 ---
 
 <Layout title="Category">
   <Container>
     <Pagetitle>
       <Fragment slot="title">
-        All posts for {category.title}
+        All posts by {author.name}
       </Fragment>
       <Fragment slot="desc">
-        See all posts we have ever written for {category.title}
+        See all posts that were written by {author.name}.
       </Fragment>
     </Pagetitle>
     <main>
