refactor: Migrate codebase to Astro v4 and update relevant dependecies

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,9 +1,6 @@
 ---
 import Container from "@components/container.astro";
-import logoImage from "@assets/logo.svg";
 import Link from "./ui/link.astro";
-import darkLogo from "@assets/logo-dark.svg";
-import { Image } from "@astrojs/image/components";
 
 interface Menu {
   label: string;
@@ -11,6 +8,7 @@ interface Menu {
   external?: boolean;
   badge?: string;
 }
+
 const leftmenu: Menu[] = [
   {
     label: "Home",
@@ -63,11 +61,11 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
 
       <div class="flex items-center justify-between w-full md:w-auto">
         <a class="w-28 dark:hidden" href="/">
-          <Image src={logoImage} alt="Logo" />
+          <img src="/src/assets/logo.svg" alt="Logo" />
         </a>
 
         <a class="hidden w-28 dark:block" href="/">
-          <Image src={darkLogo} alt="Logo" />
+          <img src="/src/assets/logo-dark.svg" alt="Logo" />
         </a>
 
         <button
@@ -92,7 +90,9 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
             ></path>
           </svg>
         </button>
-      </div><div
+      </div>
+
+      <div
         class="flex-col gap-10 items-center justify-start order-2 hidden w-full md:flex md:flex-row md:w-auto md:flex-1 md:order-none">
         {
           rightmenu.map((item) => (
@@ -103,6 +103,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
         }
       </div>
     </div>
+
     <div class="navmenu-toggle hidden">
       <div
         class="flex flex-col items-center justify-start order-2 w-full md:hidden">
