--- a/src/components/authorcard.astro
+++ b/src/components/authorcard.astro
@@ -1,22 +1,16 @@
 ---
-import { Image } from "@astrojs/image/components";
-
 const { author } = Astro.props;
 ---
 
-<div
-  class="px-8 py-8 mt-3 text-gray-500 rounded-2xl bg-gray-50 dark:bg-gray-900 dark:text-gray-400">
+<div class="px-8 py-8 mt-3 text-gray-500 rounded-2xl bg-gray-50 dark:bg-gray-900 dark:text-gray-400">
   <div class="flex flex-wrap items-start gap-3 sm:flex-nowrap sm:gap-6">
     <div class="relative flex-shrink-0 w-24 h-24 mt-1">
       {
         author.image && (
-          <Image
+          <img
             src={author.image}
             alt="Author Photo"
-            width={96}
-            height={96}
-            loading="eager"
-            class="rounded-full"
+            class="w-full h-full object-cover rounded-full"
           />
         )
       }
