--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -1,14 +1,13 @@
 ---
 import cx from "classnames";
 
-import { Image, Picture } from "@astrojs/image/components";
 import Label from "@components/ui/label.astro";
 import type { Author } from "@data/authors";
 import { authors } from "@data/authors";
 import type { Category } from "@data/category";
 import { categories } from "@data/category";
 import { getFormattedDate } from "@utils/all";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 const { post, aspect, preloadImage } = Astro.props;
 const author = authors.find((item) => item.slug === post.data.author) as Author;
@@ -20,21 +19,18 @@ const category = categories.find(
 <div class="cursor-pointer group">
   <div
     class={cx(
-      "relative overflow-hidden transition-all bg-gray-100 rounded-md dark:bg-gray-800   hover:scale-105",
-      aspect === "landscape" ? "aspect-video" : "aspect-square"
+      "relative overflow-hidden transition-all bg-gray-100 rounded-md dark:bg-gray-800 hover:scale-105",
+      aspect === "landscape" ? "aspect-4/3" : "aspect-1/1" 
     )}>
     <a href={"/blog/" + post.slug}>
       {
         post.data.image ? (
-          <Picture
-            src={post.data.image}
-            widths={[200, 400, 800]}
-            sizes="(max-width: 640px) 90vw, 480px"
-            aspectRatio={aspect === "landscape" ? "16:9" : "1:1"}
-            alt="Thumbnail"
-            loading={preloadImage ? "eager" : "lazy"}
-            class="w-full h-full rounded-md"
-          />
+            <img
+              src={post.data.image}
+              alt="Thumbnail"
+              loading={preloadImage ? "eager" : "lazy"}
+              class="absolute top-0 left-0 w-full h-full object-cover rounded-md"
+            />
         ) : (
           <span class="absolute w-16 h-16 text-gray-200 -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
             <Icon
@@ -76,14 +72,12 @@ const category = categories.find(
       <div class="relative flex-shrink-0 w-5 h-5">
         {
           author.image && (
-            <Image
-              src={author.image}
-              alt="Author Photo"
-              width={40}
-              height={40}
-              loading="lazy"
-              class="rounded-full"
-            />
+          <img
+            src={author.image}
+            alt="Author Photo"
+            loading="lazy"
+            class="w-full h-full object-cover rounded-full"
+          />
           )
         }
       </div>
