Refactor image paths in navbar and authors.ts

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -61,11 +61,11 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
 
       <div class="flex items-center justify-between w-full md:w-auto">
         <a class="w-28 dark:hidden" href="/">
-          <img src="/src/assets/logo.svg" alt="Logo" />
+          <img src="/logo.svg" alt="Logo" />
         </a>
 
         <a class="hidden w-28 dark:block" href="/">
-          <img src="/src/assets/logo-dark.svg" alt="Logo" />
+          <img src="/logo-dark.svg" alt="Logo" />
         </a>
 
         <button
