--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -14,6 +14,7 @@ const author = authors.find((item) => item.slug === post.data.author) as Author;
 const category = categories.find(
   (item) => item.slug === post.data.category
 ) as Category;
+const imagePath = `${import.meta.env.BASE_URL}src/assets/authors/${author.image}`;
 ---
 
 <div class="cursor-pointer group">
@@ -73,7 +74,7 @@ const category = categories.find(
         {
           author.image && (
           <img
-            src={author.image}
+            src={imagePath}
             alt="Author Photo"
             loading="lazy"
             class="w-full h-full object-cover rounded-full"
