--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Pagetitle from "@components/pagetitle.astro";
 import Link from "@components/ui/link.astro";
-import stefanLogo from "@assets/authors/stefan.webp";
+import stefanLogo from "/public/authors/stefan.webp";
 ---
 
 <Layout title="About">
