--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -30,7 +30,6 @@ const author = authors.find((item) => item.slug === post.data.author) as Author;
 const category = categories.find(
   (item) => item.slug === post.data.category
 ) as Category;
-const imagePath = `${import.meta.env.BASE_URL}src/assets/authors/${author.image}`;
 ---
 
 <Layout
@@ -56,7 +55,7 @@ const imagePath = `${import.meta.env.BASE_URL}src/assets/authors/${author.image}
             {
               author.image && (
                 <img
-                  src={imagePath}
+                  src={author.image}
                   alt="Author Photo"
                   loading="lazy"
                   class="w-full h-full object-cover rounded-full"
