--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,5 +63,22 @@ const makeTitle = title
         content-visibility: auto;
       }
     </style>
+    <script>
+      declare global {
+        interface Window {
+          netlifyIdentity: any;
+        }
+      }
+
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user: any) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
