Refactor admin configuration and layout files

--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -2,10 +2,10 @@
 import cx from "classnames";
 
 import Label from "@components/ui/label.astro";
-import type { Author } from "@data/authors";
-import { authors } from "@data/authors";
-import type { Category } from "@data/category";
-import { categories } from "@data/category";
+import type { Props as Author } from "@data/author-types";
+import  authors  from "@data/authors.json";
+import type { Props as Category } from "@data/category-types";
+import categories  from "@data/categories.json";
 import { getFormattedDate } from "@utils/all";
 import { Icon } from "astro-icon/components";
 
