--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -5,8 +5,8 @@ import Postlist from "@components/postlist.astro";
 import Layout from "@layouts/Layout.astro";
 import { latestPosts } from "@utils/content";
 
-import { authors } from "@data/authors";
-import type { Author } from "@data/category";
+import authors from "@data/authors.json";
+import type { Props as Author } from "@data/author-types";
 
 export function getStaticPaths() {
   const map = {};
