Refactor folder paths for authors and categories in admin configuration

--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -2,10 +2,10 @@
 import cx from "classnames";
 
 import Label from "@components/ui/label.astro";
-import type { Props as Author } from "@data/author-types";
-import  authors  from "@data/authors.json";
-import type { Props as Category } from "@data/category-types";
-import categories  from "@data/categories.json";
+import type { Props as Author } from "@data/authors/author-types";
+import  authors  from "@data/authors/authors.json";
+import type { Props as Category } from "@data/categories/category-types";
+import categories  from "@data/categories/categories.json";
 import { getFormattedDate } from "@utils/all";
 import { Icon } from "astro-icon/components";
 
